list(APPEND objects
    DM_gamma.cpp
    DM_k.cpp
    ELEC_evolve.cpp
    exx_lip.cpp
    FORCE_STRESS.cpp
    FORCE_gamma.cpp
    FORCE_gamma_edm.cpp
    FORCE_gamma_tvnl.cpp
    FORCE_gamma_vl.cpp
    FORCE_k.cpp
    LCAO_diago.cpp
    LCAO_evolve.cpp
    LCAO_gen_fixedH.cpp
    LCAO_hamilt.cpp
    LCAO_matrix.cpp
    LCAO_nnr.cpp
    LOOP_cell.cpp
    LOOP_ions.cpp
    build_st_pw.cpp
    center2_orb-orb11.cpp
    center2_orb-orb21.cpp
    center2_orb-orb22.cpp
    dftu.cpp
    dftu_relax.cpp
    dftu_yukawa.cpp
    global_fp.cpp
    local_orbital_charge.cpp
    local_orbital_wfc.cpp
    record_adj.cpp
    dm_2d.cpp
    wavefunc_in_pw.cpp
	H_TDDFT_pw.cpp
    run_md_lcao.cpp
    dmft.cpp
)

add_library(
    lcao
    OBJECT
    ${objects}
)
