list(APPEND objects
    H_Ewald_pw.cpp
    H_Hartree_pw.cpp
    H_XC_pw.cpp
    VL_in_pw.cpp
    VNL_in_pw.cpp
    charge.cpp
    charge_broyden.cpp
    charge_extra.cpp
    charge_mixing.cpp
    charge_pulay.cpp
    diago_cg.cpp
    diago_david.cpp
    efield.cpp
    electrons.cpp
    energy.cpp
    forces.cpp
    global.cpp
    klist.cpp
    magnetism.cpp
    occupy.cpp
    potential.cpp
    potential_libxc.cpp
    potential_libxc_meta.cpp
    pw_basis.cpp
    pw_complement.cpp
    soc.cpp
    sto_che.cpp
    sto_elec.cpp
    sto_hchi.cpp
    sto_iter.cpp
    sto_wf.cpp
    stress_func_cc.cpp
    stress_func_ewa.cpp
    stress_func_gga.cpp
    stress_func_mgga.cpp
    stress_func_har.cpp
    stress_func_kin.cpp
    stress_func_loc.cpp
    stress_func_nl.cpp
    stress_func_print.cpp
    stress_pw.cpp
    symmetry_rho.cpp
    threshold_elec.cpp
    use_fft.cpp
    vdwd2.cpp
    vdwd2_parameters.cpp
    vdwd3.cpp
    vdwd3_parameters.cpp
    wavefunc.cpp
    wf_atomic.cpp
    wf_igk.cpp
    xc_1.cpp
    xc_2.cpp
    xc_3.cpp
    xc_functional.cpp
    xc_gga_pw.cpp
    xc_type.cpp
    run_md_pw.cpp)
if(USE_CUDA)
    list(APPEND objects
        diago_cg_gpu.cu
        hamilt.cu
        hamilt_pw_gpu.cu
        use_fft_kernel.cu
    )
else()
    list(APPEND objects
        hamilt.cpp
        hamilt_pw.cpp
    )
endif()

add_library(
    pw
    OBJECT
    ${objects}
)
